Rename project so it can be published

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "bincrypt"
+name = "binary_enclave"
 version = "0.1.0"
 authors = ["Zachery Hostens <zacheryph@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+categories = ["config"]
 
 [dependencies]
-bincode = "1.2.1"
-bincrypt-macro = { version = "=0.1.0", path = "./macro" }
+bincode = "1.3.1"
+binary_enclave_macro = { version = "=0.1.0", path = "macro" }
 goblin = "0.2.3"
-serde = "1.0.113"
+serde = "1.0.114"
 thiserror = "1.0.20"
