--- a/examples/botpack/Cargo.toml
+++ b/examples/botpack/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bincrypt = { path = "../.." }
+binary_enclave = { path = "../.." }
 gumdrop = "0.8.0"
 serde = { version = "1.0.114", features = ["derive"] }
 serde_json = "1.0.55"
