--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2018"
 categories = ["config"]
 
 [dependencies]
-bincode = "1.3.1"
+bincode = "^1.3"
 binary_enclave_macro = { version = "=0.1.0", path = "macro" }
-goblin = "0.2.3"
-serde = "1.0.114"
-thiserror = "1.0.20"
+goblin = "^0.2"
+serde = "^1.0"
+thiserror = "^1.0"
