--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0.18"
-quote = "1.0.7"
-syn = { version = "1.0.31", features = ["full"] }
+proc-macro2 = "^1.0"
+quote = "^1.0"
+syn = { version = "^1.0", features = ["full"] }
