--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ homepage = "https://github.com/zacheryph/binary_enclave"
 repository = "https://github.com/zacheryph/binary_enclave"
 description = "embed modifiable configuration or other data within a binary directly"
 
+exclude = [".gitignore", "examples/"]
+
 [dependencies]
 bincode = "^1.3"
 binary_enclave_macro = { version = "=0.1.0", path = "macro" }
