--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 license = "MIT"
 homepage = "https://github.com/zacheryph/binary_enclave"
 repository = "https://github.com/zacheryph/binary_enclave"
+documentation = "https://docs.rs/binary_enclave"
 description = "embed modifiable configuration or other data within a binary directly"
 
 exclude = [".gitignore", "examples/"]
