--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,7 @@ binary_enclave_macro = { version = "=0.1.0", path = "macro" }
 goblin = "^0.2"
 serde = "^1.0"
 thiserror = "^1.0"
+
+[dev-dependencies]
+serde = { version = "1.0.114", features = ["derive"] }
+serde_json = "1.0.55"
